oktana-slack-integration/force-app/main/default/objects/Token_Custom_Metadata__mdt/Token_Custom_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Token Custom Metadata</label>
    <pluralLabel>Tokens Custom Metadata</pluralLabel>
</CustomObject>