oktana-slack-integration/force-app/main/default/objects/Token_Custom_Metadata__mdt/fields/Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Bot_Token__c</fullName>
    <label>Bot Token</label>
    <type>TextArea</type>
</CustomField>