oktana-slack-integration/force-app/main/default/objects/Token_Custom_Metadata__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <type>TextArea</type>
</CustomField>