oktana-slack-integration/force-app/main/default/objects/Token_Custom_Metadata__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>